# OtakuShelf

./: README.md  docker-compose.yml
.github/workflows/: tests.yml
backend/: .dockerignore  .env.example  .gitignore  .python-version  Dockerfile  Pipfile  README.md  pyproject.toml  pytest.ini
backend/.github/workflows/: lint.yaml
backend/src/: cache.py  config.py  dependencies.py  exceptions.py  main.py  rate_limit.py  responses.py  schemas.py
backend/src/auth/: __init__.py  dependencies.py  service.py
backend/src/db/: core.py
backend/src/models/: __init__.py  user.py  watchlist.py
backend/src/routers/: __init__.py  health.py  users.py  watchlist.py
backend/src/services/: auth_service.py  user_service.py  watchlist_service.py
backend/tests/: conftest.py
backend/tests/factories/: __init__.py
backend/tests/integration/: test_complex_workflows.py  test_users_api.py  test_watchlist_api.py
backend/tests/performance/: test_performance.py
backend/tests/security/: test_security.py
backend/tests/unit/: test_auth_service.py  test_user_model.py  test_watchlist_model.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  eslint.config.mjs  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vitest.config.ts
frontend/.github/workflows/: lint.yaml
frontend/app/: app.config.ts  app.vue  error.vue
frontend/app/components/: add-to-watchlist-modal.vue  add-to-watchlist-section.vue  anime-card.vue  anime-description.vue  anime-details.vue  anime-external-links.vue  anime-genres.vue  anime-header.vue  anime-image.vue  anime-info.vue  anime-meta.vue  anime-next-episode.vue  anime-search-enhanced.vue  anime-search.vue  anime-skeleton.vue  anime-studios.vue  anime-synopsis.vue  anime-trailer.vue  anime-watchlist-actions.vue  app-footer.vue  app-header.vue  auth-form.vue  auth-view.vue  edit-watchlist-modal.vue  error-state.vue  loading-state.vue  network-status.vue  pagination.vue  responsive-container.vue  search-input.vue  toast-container.vue  user-profile.vue  watchlist-card.vue  watchlist-view.vue
frontend/app/composables/: use-ani-list.ts  use-anime-details.ts  use-anime-search-with-watchlist.ts  use-anime-utils.ts  use-auth.ts  use-error-handler.ts  use-otaku-theme.ts  use-watchlist.ts
frontend/app/layouts/: default.vue
frontend/app/middleware/: auth.ts  global-auth.global.ts
frontend/app/pages/: about.vue  anime.vue  auth.vue  index.vue  privacy.vue  settings.vue  terms.vue  watchlist.vue
frontend/app/plugins/: supertokens.client.ts
frontend/plugins/: supertokens.client.ts
frontend/queries/: anime.ts
frontend/tests/: setup.ts
(+20 files in other folders)
