[project]
name = "otaku-shelf-backend"
version = "0.0.1"
requires-python = "~=3.12.0"
dependencies = [
    "fastapi[standard]",
    "supertokens-python",
    "sqlmodel",
    "pydantic-settings",
    "psycopg2>=2.9.10",
]

[dependency-groups]
dev = ["ruff"]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
    "faker>=24.0.0",
    "factory-boy>=3.3.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0"
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
