[project]
name = "otaku-shelf-backend"
version = "0.0.1"
requires-python = "==3.12.*" # Match Vercel's Python version
dependencies = [
    "fastapi",
    "supertokens-python",
    "sqlmodel",
    "pydantic-settings",
    "psycopg2-binary",
]

[dependency-groups]
dev = ["ruff", "fastapi[standard]"]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "faker",
    "factory-boy",
    "pytest-mock",
    "pytest-xdist",
]

[build-system]
requires = ["uv"]
build-backend = "uv"

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
